--- a/vms_operating_unit_sequence/views/operating_unit_view.xml
+++ b/vms_operating_unit_sequence/views/operating_unit_view.xml
@@ -5,9 +5,9 @@
         <field name="model">operating.unit</field>
         <field name="inherit_id" ref="operating_unit.view_operating_unit_form" />
         <field name="arch" type="xml">
-            <xpath expr="//gruoup[@name='main_group']" position="after">
+            <xpath expr="//group[@name='main_group']" position="after">
                 <group name="vms" string="VMS Sequences">
-                    <field name="order_sequence_id" />
+                    <field name="vms_order_sequence_id" />
                 </group>
             </xpath>
         </field>
