--- a/vms_report_operating_unit_sequence/views/operating_unit_view.xml
+++ b/vms_report_operating_unit_sequence/views/operating_unit_view.xml
@@ -5,8 +5,8 @@
         <field name="model">operating.unit</field>
         <field name="inherit_id" ref="operating_unit.view_operating_unit_form" />
         <field name="arch" type="xml">
-            <xpath expr="//gruoup[@name='vms']" position="inside">
-                <field name="report_sequence_id" />
+            <xpath expr="//group[@name='vms']" position="inside">
+                <field name="vms_report_sequence_id" />
             </xpath>
         </field>
     </record>
